--- a/style.css
+++ b/style.css
@@ -1,40 +1,106 @@
 #all {
     display: grid;
-    grid-template-columns:600px 500px 400px;
-    grid-template-rows: 500px 500px 500px;
-
-
-
-}
- #titlebar {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    margin-top:100px;
- }
-
-t1 {
-font-size: 75px;
-font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-margin-left:380px;
-background-color:lightblue;
-grid-column-start:span;
-font-weight: bold;
-
-
+    grid-template-columns: 600px 700px 100px 600px;
+    grid-template-rows: 350px 300px 250px 2000px;
+    text-align: center;
+    background-color: #ffffff;
+    font-size: 20px;
 }
 
-p {
-    text-align:center;
-    font-size: 30px;
+#titlebar {
+    font-size: 45px;
     grid-column-start: 2;
-    grid-row-start: 1;
-    font-weight:bold;
-    margin-left: 130px;
-    margin-top:750px;
+    grid-row-start: 2;
+    margin-top: 120px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+}
     
+.topnav {
+    text-align: center;
+    overflow: hidden;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #080808;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 25px;
+  }
+
+  .topnav a:hover {
+    background-color: #fdc1f5;
+    color: black;
+  }
+
+  .topnav a.active {
+    background-color: #fdc1f5;
+    color: rgb(0, 0, 0);
+  }
+  .topnav input[type=text] {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+    grid-row-start:3;
+   
+  }
+  @media screen and (max-width: 600px) {
+    .topnav a, .topnav input[type=text] {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    .topnav input[type=text] {
+      border: 1px solid #ccc;
+    }
+  }
+  
+  .home {
+    grid-column-start: 2;
+    grid-row-start:3;
+    font-family: 'Times New Roman', Times, serif;
+  }
+ 
+  .about {
+    grid-column-start:2;
+    grid-row-start:1;
+  }
+
+  h2 {
+    grid-column-start: 2;
+    margin-top: 300px;
+
+
+  }
+
+  h3 {
+    margin-left:25px;
+    margin-top: 100px;
+  }
+.search {
+  margin-top: 20px;
+  grid-column-start: 3;
+  grid-row-start:1;
 }
 
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
 
+.contentwo {
+  margin-top:900px;
 
-
-
+}
